@@ -891,6 +891,7 @@
   <string><id>13396</id><value>Audio and Subtitle Settings</value></string>
   <string><id>13397</id><value>Enable Subtitles</value></string>
   <string><id>13398</id><value>Bookmarks</value></string>
+  <string><id>13399</id><value>Ignore "The" when sorting</value></string>
 
   <string><id>14000</id><value>Stack</value></string>
   <string><id>14001</id><value>Unstack</value></string>
